# medsched-api

./: .dockerignore  .env.example  Dockerfile  LICENSE  Makefile  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
src/core/: config.py  security.py
src/domain/entities/: base_audit_entity.py  doctor_entity.py  document_type_entity.py  permission_entity.py  role_entity.py  specialty_entity.py  user_entity.py  work_schedule_entity.py
src/domain/enums/: gender.py  permission_action.py  permission_resource.py  week_day.py
src/domain/exceptions/: __init__.py  domain_error.py  invalid_document_error.py  invalid_email_error.py  invalid_person_name_error.py  invalid_phone_number_error.py
src/domain/value_objects/: __init__.py  document.py  email.py  person_name.py  phone_number.py
tests/: conftest.py
tests/unit/core/: test_config.py  test_security.py
tests/unit/domain/entities/: test_base_audit_entity.py  test_doctor_entity.py  test_document_type_entity.py  test_permission_entity.py  test_role_entity.py  test_specialty_entity.py  test_user_entity.py  test_word_schedule_entity.py
tests/unit/domain/enums/: test_gender.py  test_permission_action.py  test_permission_resource.py  test_week_day.py
tests/unit/domain/exceptions/: test_domain_error.py  test_invalid_document_error.py  test_invalid_email_error.py  test_invalid_person_name_error.py  test_invalid_phone_number_error.py
tests/unit/domain/value_objects/: test_document.py  test_email.py  test_person_name.py  test_phone_number.py
