[project]
name = "medsched-api"
version = "0.1.0"
description = ""
authors = [
  { name = "Jacobo Blandón Castro", email = "jacoboblandon94@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "fastapi (>=0.138.1,<0.139.0)",
  "uvicorn (>=0.49.0,<0.50.0)",
  "sqlalchemy (>=2.0.51,<3.0.0)",
  "alembic (>=1.18.5,<2.0.0)",
  "asyncpg (>=0.31.0,<0.32.0)",
  "pydantic (>=2.13.4,<3.0.0)",
  "pydantic-settings (>=2.14.2,<3.0.0)",
  "bcrypt (>=5.0.0,<6.0.0)",
  "pyjwt (>=2.13.0,<3.0.0)",
]

[tool.poetry]
package-mode = false

[tool.mypy]
files = ["src"]
explicit_package_bases = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.1.1,<10.0.0"
pytest-asyncio = ">=1.4.0,<2.0.0"
ruff = ">=0.15.20,<0.16.0"
mypy = ">=2.1.0,<3.0.0"
pytest-cov = ">=7.1.0,<8.0.0"
bandit = ">=1.9.4,<2.0.0"
pytest-mock = ">=3.15.1,<4.0.0"
httpx2 = "^2.5.0"
